# telegram-entertainment-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
lib/: blackjack.py  bot.py  bot_commands.py  config_reader.py  database.py  downloader.py  gambler.py  init.py  ledger.py  logger.py  models.py  opencv_custom_writer.py  physics_simulation.py  roulette.py  ssh_commands.py  storage.py  temporal_storage.py  video_optimizer.py  workers.py
lib/LLM/: base.py  dialog.py  llm_providers.py  openai_base.py
lib/api/: github_api.py
lib/callbacks/: blackjack_callback.py  switch_provider_callback.py
lib/gambling/: base.py  blackjack.py  blackjack_rendering.py  gambler.py  physics_simulation.py  roulette.py
lib/keyboards/: blackjack_keyboard.py  switch_provider_keyboard.py
lib/ledger/: chain_manager.py  helpers.py  ledger.py  state_manager.py  tx_manager.py  validator.py
lib/llms/: general_llm.py  openrouter.py
lib/message_factories/: get_leaderboard.py
lib/middlewares/: access_middleware.py  blackjack_game_access_middleware.py  logger_middleware.py  user_middleware.py
lib/router_factories/: admin_commands.py  blackjack_session.py  general_commands.py  messages.py
lib/routers/: errors.py  group_admin.py  group_general.py  inline_queries.py  messages.py  private_admin.py
lib/states/: confirmation_state.py
lib/utils/: command_utils.py  cv2_utils.py  general_utils.py  message_factories.py  message_utils.py  (+2 more)
libcpp/: Makefile  cpp_wrapper.py  linker.py  reward_function.cpp
tools/: import_database.py
(+8 files in other folders)
